--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2206,7 +2206,6 @@ section.form .container {
 
 
 
-
 #msg-box5-bz DIV {
   text-align: center;
   font-family: 'Slabo 27px', serif;
@@ -2219,14 +2218,9 @@ section.form .container {
   font-size: 16px;
 }
 #content1-is P {
-  font-family: 'Slabo 27px', serif;
+  font-family: 'Droid Serif', serif;
   text-align: center;
   font-size: 15px;
-}
-#content2-im P {
-  font-family: 'Slabo 27px', serif;
-  font-size: 11px;
-  text-align: center;
 }
 #footer1-c0 P {
   color: #282828;
