create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2093,22 +2093,6 @@ section.form .container {
 #content1-c6 DIV {
   color: #d14841;
 }
-#footer1-bv P {
-  color: #282828;
-  text-align: center;
-  font-family: 'Slabo 27px', serif;
-  font-size: 12px;
-}
-#features3-bw P {
-  color: #d14841;
-  font-size: 15px;
-  text-align: center;
-  font-family: 'Droid Serif', serif;
-}
-#features3-bw H4 {
-  font-family: 'PT Serif', serif;
-  font-size: 18px;
-}
 #features3-bx P {
   color: #d14841;
   font-size: 14px;
@@ -2117,6 +2101,12 @@ section.form .container {
 #features3-bx H4 {
   font-family: 'PT Serif', serif;
   font-size: 18px;
+}
+#footer1-bv P {
+  color: #282828;
+  text-align: center;
+  font-family: 'Slabo 27px', serif;
+  font-size: 12px;
 }
 #menu-g4 .hide-buttons .nav-btn {
   display: none !important;
@@ -2193,6 +2183,14 @@ section.form .container {
 }
 #features3-ii DIV {
   font-size: 16px;
+}
+#features3-ot P {
+  color: #d14841;
+  font-size: 14px;
+  font-family: 'Droid Serif', serif;
+}
+#features3-ot H4 {
+  font-family: 'PT Serif', serif;
 }
 #social-buttons2-il .mbr-section-title,
 #social-buttons2-il .btn-social {
