create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4948,7 +4948,7 @@ section.form .container {
   font-size: 15px;
   font-family: 'Bitter', serif;
   text-align: center;
-  color: #7c706b;
+  color: #a38f84;
 }
 #buttons1-my .btn {
   font-size: 12px;
